# Aura

./: .gitignore  CLAUDE.md  README.md  test-markdown.md
app/: .gitignore  entitlements.mac.plist  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/app/: globals.css  layout.tsx  page.tsx
app/components/: AgentPanel.tsx  CitationVerifierPanel.tsx  CommandPalette.tsx  ContextMenu.tsx  DockerGuide.tsx  DockerInstallModal.tsx  DockerSetupWizard.tsx  DockerStartModal.tsx  DomainPreferenceModal.tsx  Editor.tsx  FileOutline.tsx  FileTree.tsx  MarkdownPreview.tsx  MemoryModal.tsx  ModelSelector.tsx  NewProjectModal.tsx  PDFViewer.tsx  PlanDisplay.tsx  (+7 more)
backend/: aura-backend.spec  main.py  pyi_rth_disable_logfire.py  pyproject.toml  requirements.txt
backend/agent/: __init__.py  colorist.py  compression.py  context.py  core.py  hitl.py  planning.py  processors.py  prompts.py  pydantic_agent.py  steering.py  streaming.py  venue_hitl.py  vibe_state.py
backend/agent/providers/: __init__.py  colorist.py  dashscope.py
backend/agent/subagents/: __init__.py  base.py  compiler.py  planner.py  research.py  writing.py
backend/agent/tools/: citations.py  pdf_reader.py
backend/agent/tools/citation_management/: SKILL.md  __init__.py  citation_api.py  doi_to_bibtex.py  extract_metadata.py  format_bibtex.py  search_google_scholar.py  search_pubmed.py  validate_citations.py
backend/agent/tools/citation_management/assets/: bibtex_template.bib  citation_checklist.md
backend/agent/tools/citation_management/references/: bibtex_formatting.md  citation_validation.md  google_scholar_search.md  metadata_extraction.md  pubmed_search.md
backend/schemas/: __init__.py
backend/services/: docker.py  docker_setup.py  git_sync.py  latex_parser.py  local_latex.py  memory.py  project.py  reference_verifier.py  semantic_scholar.py  synctex.py  tectonic_latex.py  unified_latex.py
backend/tests/: test_writing.py
backend/tools/: __init__.py  manager.py
backend/tools/files/: __init__.py  operations.py
backend/tools/git/: __init__.py
backend/tools/latex/: __init__.py  compile.py
backend/tools/research/: __init__.py
docs/: design_spec.md
frontend/: package.json
sandbox/: Dockerfile
scripts/: start.sh  test_api.py
(+25 files in other folders)
